# src/module/order/order.route.ts
@@ -1,10 +1,9 @@
-import * as orderController from "@/module/order/order.controller";
 import {
   jwtAuthMiddleware,
   verifyLearner,
   verifyTutor,
 } from "@/module/auth/auth.middleware";
-import { validator } from "@middleware/validation.middleware";
+import * as orderController from "@/module/order/order.controller";
 import {
   acceptOrderSchema,
   cancelOrderSchema,
@@ -12,6 +11,7 @@ import {
   declineOrderSchema,
   getMyOrdersSchema,
 } from "@/module/order/order.schema";
+import { validator } from "@middleware/validation.middleware";
 import { Router } from "express";
 
 // /api/v1/orders
@@ -20,12 +20,14 @@ orderRouter.use(jwtAuthMiddleware);
 
 orderRouter.get(
   "/me",
+  // #swagger.tags = ['orders']
   validator(getMyOrdersSchema),
   orderController.getMyOrders,
 );
 
 orderRouter.post(
   "/",
+  // #swagger.tags = ['orders']
   verifyLearner,
   validator(createOrderSchema),
   orderController.createOrder,
@@ -33,6 +35,7 @@ orderRouter.post(
 
 orderRouter.post(
   "/:orderId/cancel",
+  // #swagger.tags = ['orders']
   verifyTutor,
   validator(cancelOrderSchema),
   orderController.cancelOrder,
@@ -40,6 +43,7 @@ orderRouter.post(
 
 orderRouter.post(
   "/:orderId/accept",
+  // #swagger.tags = ['orders']
   verifyTutor,
   validator(acceptOrderSchema),
   orderController.acceptOrder,
@@ -47,6 +51,7 @@ orderRouter.post(
 
 orderRouter.post(
   "/:orderId/decline",
+  // #swagger.tags = ['orders']
   verifyTutor,
   validator(declineOrderSchema),
   orderController.declineOrder,
