# src/module/subject/subject.route.ts
@@ -1,9 +1,13 @@
-import { Router } from "express";
 import * as subjectController from "@/module/subject/subject.controller";
+import { Router } from "express";
 
 // /api/v1/subjects
 const subjectRouter = Router();
 
-subjectRouter.get("/", subjectController.getAllSubjects);
+subjectRouter.get(
+  "/",
+  // #swagger.tags = ['subjects']
+  subjectController.getAllSubjects,
+);
 
 export default subjectRouter;
