# src/swagger/specs.json
@@ -67,6 +67,9 @@
     },
     "/api/v1/auth/fcm-token": {
       "post": {
+        "tags": [
+          "auth"
+        ],
         "description": "",
         "parameters": [
           {
@@ -85,6 +88,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "auth"
+        ],
         "description": "",
         "parameters": [
           {
@@ -105,6 +111,9 @@
     },
     "/api/v1/subjects/": {
       "get": {
+        "tags": [
+          "subjects"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -118,6 +127,9 @@
     },
     "/api/v1/learners/profile": {
       "patch": {
+        "tags": [
+          "learners"
+        ],
         "description": "",
         "parameters": [
           {
@@ -141,6 +153,9 @@
     },
     "/api/v1/learners/profile/picture": {
       "put": {
+        "tags": [
+          "learners"
+        ],
         "description": "",
         "parameters": [
           {
@@ -170,6 +185,9 @@
     },
     "/api/v1/learners/password": {
       "put": {
+        "tags": [
+          "learners"
+        ],
         "description": "",
         "parameters": [
           {
@@ -193,6 +211,9 @@
     },
     "/api/v1/tutors/services/": {
       "get": {
+        "tags": [
+          "tutors/services"
+        ],
         "description": "",
         "parameters": [
           {
@@ -211,6 +232,9 @@
         }
       },
       "post": {
+        "tags": [
+          "tutors/services"
+        ],
         "description": "",
         "parameters": [
           {
@@ -234,6 +258,9 @@
     },
     "/api/v1/tutors/services/{tutoriesId}": {
       "get": {
+        "tags": [
+          "tutors/services"
+        ],
         "description": "",
         "parameters": [
           {
@@ -255,6 +282,9 @@
         }
       },
       "patch": {
+        "tags": [
+          "tutors/services"
+        ],
         "description": "",
         "parameters": [
           {
@@ -282,6 +312,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "tutors/services"
+        ],
         "description": "",
         "parameters": [
           {
@@ -308,6 +341,9 @@
     },
     "/api/v1/tutors/services/{tutoriesId}/availability": {
       "get": {
+        "tags": [
+          "tutors/services"
+        ],
         "description": "",
         "parameters": [
           {
@@ -331,6 +367,9 @@
     },
     "/api/v1/tutors/services/me": {
       "get": {
+        "tags": [
+          "tutors/services"
+        ],
         "description": "",
         "parameters": [
           {
@@ -357,6 +396,9 @@
     },
     "/api/v1/tutors/profile": {
       "patch": {
+        "tags": [
+          "tutors"
+        ],
         "description": "",
         "parameters": [
           {
@@ -380,6 +422,9 @@
     },
     "/api/v1/tutors/profile/picture": {
       "put": {
+        "tags": [
+          "tutors"
+        ],
         "description": "",
         "parameters": [
           {
@@ -409,6 +454,9 @@
     },
     "/api/v1/tutors/password": {
       "put": {
+        "tags": [
+          "tutors"
+        ],
         "description": "",
         "parameters": [
           {
@@ -432,6 +480,9 @@
     },
     "/api/v1/orders/me": {
       "get": {
+        "tags": [
+          "orders"
+        ],
         "description": "",
         "parameters": [
           {
@@ -452,6 +503,9 @@
     },
     "/api/v1/orders/": {
       "post": {
+        "tags": [
+          "orders"
+        ],
         "description": "",
         "parameters": [
           {
@@ -475,6 +529,9 @@
     },
     "/api/v1/orders/{orderId}/cancel": {
       "post": {
+        "tags": [
+          "orders"
+        ],
         "description": "",
         "parameters": [
           {
@@ -504,6 +561,9 @@
     },
     "/api/v1/orders/{orderId}/accept": {
       "post": {
+        "tags": [
+          "orders"
+        ],
         "description": "",
         "parameters": [
           {
@@ -533,6 +593,9 @@
     },
     "/api/v1/orders/{orderId}/decline": {
       "post": {
+        "tags": [
+          "orders"
+        ],
         "description": "",
         "parameters": [
           {
@@ -562,6 +625,9 @@
     },
     "/api/v1/chat/rooms": {
       "post": {
+        "tags": [
+          "chat"
+        ],
         "description": "",
         "parameters": [
           {
@@ -580,6 +646,9 @@
         }
       },
       "get": {
+        "tags": [
+          "chat"
+        ],
         "description": "",
         "parameters": [
           {
@@ -600,6 +669,9 @@
     },
     "/api/v1/chat/rooms/{roomId}/messages": {
       "get": {
+        "tags": [
+          "chat"
+        ],
         "description": "",
         "parameters": [
           {
@@ -626,6 +698,9 @@
     },
     "/api/v1/chat/rooms/{roomId}/messages/text": {
       "post": {
+        "tags": [
+          "chat"
+        ],
         "description": "",
         "parameters": [
           {
@@ -652,6 +727,9 @@
     },
     "/api/v1/chat/rooms/{roomId}/messages/image": {
       "post": {
+        "tags": [
+          "chat"
+        ],
         "description": "",
         "parameters": [
           {
@@ -678,6 +756,9 @@
     },
     "/api/v1/chat/rooms/{roomId}/typing": {
       "post": {
+        "tags": [
+          "chat"
+        ],
         "description": "",
         "parameters": [
           {
@@ -704,6 +785,9 @@
     },
     "/api/v1/chat/rooms/{roomId}/presence": {
       "get": {
+        "tags": [
+          "chat"
+        ],
         "description": "",
         "parameters": [
           {
@@ -730,6 +814,9 @@
     },
     "/api/v1/reviews/tutories/{tutoriesId}": {
       "get": {
+        "tags": [
+          "reviews"
+        ],
         "description": "",
         "parameters": [
           {
@@ -748,6 +835,9 @@
     },
     "/api/v1/reviews/orders/{orderId}": {
       "post": {
+        "tags": [
+          "reviews"
+        ],
         "description": "",
         "parameters": [
           {
